<resources>
    <string name="app_name"></string>
    <string name="player1">Player1</string>
    <string name="player3">Player3</string>
    <string name="player4">Player4</string>
    <string name="player2">Player2</string>
    <string name="created_by">Created by:</string>
    <string name="feedback">Feedback:</string>
    <string name="type_here">Type here</string>
    <string name="submit">Submit</string>
    <string name="_1_player">1 player</string>
    <string name="health">Health</string>
    <string name="_2_players">2 players</string>
    <string name="player1hp">Player1hp</string>
    <string name="playername">PlayerName</string>
    <string name="player2hp">player2Hp</string>
    <string name="player1name">player1Name</string>
    <string name="player2name">player2Name</string>
    <string name="player1Hp">player1Hp</string>
    <string name="player2Name">player2Name</string>
    <string name="player2Hp">player2Hp</string>
    <string name="player3Name">player3Name</string>
    <string name="player1Name">player1Name</string>
    <string name="player3Hp">player3Hp</string>
    <string name="_3_players">3 players</string>
    <string name="player4name">player4Name</string>
    <string name="player4hp">player4Hp</string>
    <string name="_4_players">4 players</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="login">LOGIN</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="Login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="choose_players">Choose Players</string>
    <string name="enter_1_4">Enter: 1 ... 4</string>
    <string name="roll_dice">Roll Dice</string>
    <string name="Player1">Player1</string>
    <string name="roll">Roll</string>
    <string name="saved_games">Saved Games</string>
    <string name="save_game">Save Game</string>
    <string name="register">REGISTER</string>
    <string name="create_account">Create account</string>
    <string name="music">Music</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="change_names">Change Names</string>
    <string name="update_name_s">Update Name(s)</string>
    <string name="new_name">New name</string>
    <string name="textview">TextView</string>
    <string name="load">Load</string>
    <string name="more">More</string>
    <string name="game">Game</string>
    <string name="numberofplayers">NumberofPlayers</string>
    <string name="logout">LogOut</string>
    <string name="reset">Reset</string>
</resources>