<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    tools:context=".fragments.SoundEffects">

    <TextView
        android:id="@+id/player1Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/music"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/onButton"
        android:layout_width="138dp"
        android:layout_height="67dp"
        android:layout_marginTop="60dp"
        android:text="@string/on"
        android:layout_marginLeft="50dp"
        android:backgroundTint="#3EB489"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/player1Name"
        app:layout_constraintTop_toBottomOf="@+id/player1Name" />

    <Button
        android:id="@+id/offButton"
        android:layout_width="138dp"
        android:layout_height="67dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#3EB489"
        android:layout_marginRight="50dp"
        android:text="@string/off"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/player1Name"
        app:layout_constraintTop_toBottomOf="@+id/player1Name" />
</androidx.constraintlayout.widget.ConstraintLayout>