<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="#474554"
    tools:context=".gamelayouts.Game4">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ACA9BB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#ACA9BB"
        app:layout_constraintBottom_toBottomOf="@+id/divider5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <View
        android:id="@+id/divider5"
        android:layout_width="5dp"
        android:layout_height="match_parent"
        android:background="#ACA9BB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/player4Hp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_marginTop="30dp"
        android:text="@string/player4hp"
        android:textColor="#ACA9BB"
        app:layout_constraintEnd_toStartOf="@+id/minus4"
        app:layout_constraintStart_toEndOf="@+id/plus4"
        app:layout_constraintTop_toBottomOf="@+id/minus4" />

    <TextView
        android:id="@+id/player1Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/player1name"
        android:textColor="#ACA9BB"
        android:textSize="35sp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/minus1"
        app:layout_constraintEnd_toStartOf="@+id/minus1"
        app:layout_constraintStart_toEndOf="@+id/plus1"/>

    <TextView
        android:id="@+id/player2Hp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_marginTop="30dp"
        android:text="@string/player2Hp"
        android:textColor="#ACA9BB"
        app:layout_constraintEnd_toStartOf="@+id/minus2"
        app:layout_constraintStart_toEndOf="@+id/plus2"
        app:layout_constraintTop_toBottomOf="@+id/minus2" />

    <TextView
        android:id="@+id/player2Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/player2Name"
        android:textColor="#ACA9BB"
        android:layout_marginBottom="50dp"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/minus2"
        app:layout_constraintEnd_toStartOf="@+id/minus2"
        app:layout_constraintStart_toEndOf="@+id/plus2"  />

    <TextView
        android:id="@+id/player1Hp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/player1Hp"
        android:textSize="35sp"
        android:textColor="#ACA9BB"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toStartOf="@+id/minus1"
        app:layout_constraintStart_toEndOf="@+id/plus1"
        app:layout_constraintTop_toBottomOf="@+id/minus1" />

    <TextView
        android:id="@+id/player3Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/player3Name"
        android:textColor="#ACA9BB"
        android:textSize="35sp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/minus3"
        app:layout_constraintEnd_toStartOf="@+id/minus3"
        app:layout_constraintStart_toEndOf="@+id/plus3"/>

    <TextView
        android:id="@+id/player3Hp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/player3Hp"
        android:textSize="35sp"
        android:textColor="#ACA9BB"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toStartOf="@+id/minus3"
        app:layout_constraintStart_toEndOf="@+id/plus3"
        app:layout_constraintTop_toBottomOf="@+id/minus3" />

    <TextView
        android:id="@+id/player4Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/player4name"
        android:textColor="#ACA9BB"
        android:layout_marginBottom="50dp"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/minus4"
        app:layout_constraintEnd_toStartOf="@+id/minus4"
        app:layout_constraintStart_toEndOf="@+id/plus4" />

    <ImageView
        android:id="@+id/plus1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/plus"
        android:layout_marginLeft="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/divider4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:tint="#04261D" />

    <ImageView
        android:id="@+id/minus1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/minus"
        android:layout_marginRight="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/divider4"
        app:layout_constraintEnd_toStartOf="@+id/divider5"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:tint="#04261D" />

    <ImageView
        android:id="@+id/plus2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/plus"
        app:layout_constraintBottom_toBottomOf="@+id/divider4"
        app:layout_constraintStart_toStartOf="@+id/divider5"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:tint="#04261D"
        android:layout_marginLeft="25dp"/>

    <ImageView
        android:id="@+id/minus2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/minus"
        app:layout_constraintBottom_toBottomOf="@+id/divider4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_marginRight="25dp"
        app:tint="#04261D" />

    <ImageView
        android:id="@+id/plus3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/plus"
        android:layout_marginLeft="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4"
        app:tint="#04261D" />

    <ImageView
        android:id="@+id/minus3"
        android:layout_width="50dp"
        android:layout_height="50dp"

        android:layout_marginRight="25dp"
        android:src="@drawable/minus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/divider5"
        app:layout_constraintTop_toBottomOf="@+id/divider4"
        app:tint="#04261D" />

    <ImageView
        android:id="@+id/plus4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/plus"
        android:layout_marginLeft="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/divider5"
        app:layout_constraintTop_toBottomOf="@+id/divider4"
        app:tint="#04261D" />

    <ImageView
        android:id="@+id/minus4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginRight="25dp"
        android:src="@drawable/minus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4"
        app:tint="#04261D" />

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/_4_players"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
