<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".gamelayouts.Game2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="#474554">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ACA9BB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/_2_players"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#ACA9BB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player1Hp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textSize="35sp"
        android:text="@string/player1Hp"
        android:textColor="#ACA9BB"
        app:layout_constraintEnd_toStartOf="@+id/minus1"
        app:layout_constraintStart_toEndOf="@+id/plus1"
        app:layout_constraintTop_toBottomOf="@+id/minus1"
        />

    <TextView
        android:id="@+id/player1Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:textSize="35sp"
        android:gravity="center"
        android:text="@string/player1name"
        android:textColor="#ACA9BB"
        app:layout_constraintBottom_toTopOf="@+id/minus1"
        app:layout_constraintEnd_toStartOf="@+id/minus1"
        app:layout_constraintStart_toEndOf="@+id/plus1" />

    <ImageView
        android:id="@+id/minus1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="100dp"
        android:src="@drawable/minus"
        app:layout_constraintBottom_toTopOf="@+id/divider3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:tint="#04261D" />

    <TextView
        android:id="@+id/player2Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35sp"
        android:text="@string/player2name"
        android:textColor="#ACA9BB"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/minus2"
        app:layout_constraintEnd_toStartOf="@+id/minus2"
        app:layout_constraintStart_toEndOf="@+id/plus2" />

    <TextView
        android:id="@+id/player2Hp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/player2hp"
        android:textSize="35sp"
        android:textColor="#ACA9BB"
        app:layout_constraintEnd_toStartOf="@+id/minus2"
        app:layout_constraintStart_toEndOf="@+id/plus2"
        app:layout_constraintTop_toBottomOf="@+id/minus2" />

    <ImageView
        android:id="@+id/plus1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:src="@drawable/plus"
        app:layout_constraintBottom_toTopOf="@+id/divider3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:tint="#04261D" />

    <ImageView
        android:id="@+id/plus2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:src="@drawable/plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        app:tint="#04261D"  />

    <ImageView
        android:id="@+id/minus2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="100dp"
        android:src="@drawable/minus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        app:tint="#04261D"  />

</androidx.constraintlayout.widget.ConstraintLayout>
